first post and some modified info

--- a/_includes/cat.html
+++ b/_includes/cat.html
@@ -81,11 +81,11 @@
                         </ul>
                 </div>
                 <div class="well">
-                    <h4>This blog is maintained by <a href="http://webdesign.airrayagroup.com/">AIRRAYA</a></h4>
-                    <p>Get in touch with us at airrayagroup@gmail.com</p>
+                    <h4>This blog is maintained by Ahn</h4>
+                    <p>Get in touch with me at phoenixahn@outlook.com</p>
 					<ul class="list-inline">
                             <li>
-								<a href="https://www.facebook.com/airrayagroup/">
+								<a href="https://www.facebook.com/phoenixahn/">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -93,7 +93,7 @@
 								</a>
                             </li>
                             <li>
-								<a href="http://webdesign.airrayagroup.com">
+								<a href="https://twitter.com/phoenixahn">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
@@ -101,7 +101,7 @@
 								</a>
                             </li>
                             <li>
-								<a href="mailto:airrayagroup@gmail.com">
+								<a href="mailto:phoenixahn@outlook.com">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -109,7 +109,7 @@
 								</a>
                             </li>
                             <li>
-								<a href="https://bitbucket.org/airrayagroup/">
+								<a href="https://github.com/phoenixahn/">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
