--- a/_includes/container.html
+++ b/_includes/container.html
@@ -142,11 +142,11 @@
                 </div>
                 <!-- author widget -->
                 <div class="well">
-                    <h4>This blog is maintained by <a href="http://www.airrayagroup.com/">AIRRAYA</a></h4>
-                    <p>Get in touch with us at airrayagroup@gmail.com</p>
+                    <h4>This blog is maintained by Ahn</h4>
+                    <p>Get in touch with me at phoenixahn@outlook.com</p>
 					<ul class="list-inline">
                             <li>
-								<a href="https://www.facebook.com/airrayagroup/">
+								<a href="https://www.facebook.com/phoenixahn/">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -154,7 +154,7 @@
 								</a>
                             </li>
                             <li>
-								<a href="http://webdesign.airrayagroup.com">
+								<a href="https://twitter.com/phoenixahn">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
@@ -162,7 +162,7 @@
 								</a>
                             </li>
                             <li>
-								<a href="mailto:airrayagroup@gmail.com">
+								<a href="mailto:phoenixahn@outlook.com">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -170,7 +170,7 @@
 								</a>
                             </li>
                             <li>
-								<a href="https://bitbucket.org/airrayagroup/">
+								<a href="https://github.com/phoenixahn/">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
 									  <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
