modify some icon

--- a/_includes/container.html
+++ b/_includes/container.html
@@ -157,7 +157,7 @@
 								<a href="https://twitter.com/phoenixahn">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
-									  <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+									  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 									</span>
 								</a>
                             </li>
@@ -173,7 +173,7 @@
 								<a href="https://github.com/phoenixahn/">
 									<span class="fa-stack fa-2x">
 									  <i class="fa fa-circle fa-stack-2x"></i>
-									  <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
+									  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
 									</span>
 								</a>
                             </li>
