--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Ahn">
     <link href='{{ "/img/favicon.ico" | prepend: site.baseurl }}' type='image/icon' rel='shortcut icon'/>
 
-    <title>Ahn's blog | A blog about me</title>
+    <title>{{site.title}} | A blog used to record everyday</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
